# everterm

./: .gitignore  .sampleenv  Cargo.toml  LICENSE  README.md  token_utils.js
client/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
client/public/: manifest.json
client/src/: App.vue  db.ts  routeTree.gen.ts  styles.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs
client/src/assets/NeueHaasGrotesk/: NeueHaasGrotesk.css
client/src/components/: CommandInput.tsx  CommandInput.vue  Header.tsx  InvalidID.tsx
client/src/components/Header/: CommandInput.tsx  Header.tsx  Status.tsx  commandSearch.ts  useCommandSearch.ts
client/src/components/ui/: input.tsx
client/src/components/ui/input/: Input.vue
client/src/lib/: asyncTimeout.ts  esiClient.ts  isTauri.ts  schemas.ts  staticESIQueries.ts
client/src/routes/: __root.tsx  index.tsx
client/src/routes/market/: index.tsx
client/src/routes/market/$itemId/: g.tsx  graph.tsx  index.tsx  mdm.tsx
client_old/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
client_old/src/: App.vue  Home.vue  main.ts  style.css
client_old/src-tauri/: tauri.conf.json
client_old/src/components/: CommandInput.vue
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs  main.rs
crates/data_fetcher/: Cargo.toml  README.md
crates/data_fetcher/src/: lib.rs  main.rs  server.rs
crates/esi/: Cargo.toml
crates/esi/src/: lib.rs  macros.rs  market.rs  universe.rs
crates/market/: Cargo.toml
crates/market/src/: lib.rs
crates/universe/: Cargo.toml
crates/universe/src/: lib.rs  macros.rs
