[workspace]
resolver = "2"
members = [
    "crates/backend",
    "crates/data_fetcher",
    "client/src-tauri",
    "crates/esi",
]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]

# Workspace Members
backend = { path = "crates/backend" }
data_fetcher = { path = "crates/data_fetcher" }
client_tauri = { path = "client/src-tauri" }
esi = { path = "crates/esi" }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dashmap = { version = "6.1", features = ["serde"] }
http-cache-reqwest.version = "0.15"
reqwest-middleware = "0.4"
bitcode = { version = "0.6", features = ["serde"] }
rlimit = "0.10"