[package]
name = "esi"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
reqwest.workspace = true
chrono.workspace = true
futures.workspace = true
dashmap.workspace = true
http-cache-reqwest.workspace = true
reqwest-middleware = "0.4"
serde_json = "1.0"
dirs = "5.0"