[package]
name = "esi"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
reqwest.workspace = true
chrono.workspace = true
futures.workspace = true
dashmap.workspace = true
http-cache-reqwest.workspace = true
reqwest-middleware.workspace = true
bitcode.workspace = true
anyhow.workspace = true
jsonwebtoken.workspace = true
envy.workspace = true
base64.workspace = true
serde_json.workspace = true